explore if I can use stacked line plot to show differences how mych wind risk is in SA and no SA  stands?

--- a/test_manus/test_manus2.tex
+++ b/test_manus/test_manus2.tex
@@ -92,36 +92,36 @@ Jyvaskyla, P.O. Box 35, FI-40014 Jyvaskyla, Finland}
     \cortext[]{}
   
   \begin{abstract}
-  Future forest management needs to balance between sustainable timber,
-  supporting non-woody ecosystem services, and shelter biodiversity. New
-  techniques to atteint this goal emerge: landscape level optimization of
-  forest managements, increasing proportion of set-aside forest stands,
-  and new harvesting techniques, such as continuous forest cover. Yet,
-  novel stand- and landscape-level management shape forest structures and
-  define future stand vulnerability to more frequent climatic disruptions,
-  such as windthrows under hardening climate change. To understand how
-  will the traditional (rotation forestry, RF) and novel forest
-  managements techniques (continuous cover forest, CCF) combined by
-  optimal management alternate the probability of wind risk, we simulated
-  forest stand dynamics under groups of alternative management regimes
-  (RF, CCF and combined: ALL) optimized over the range of harvesting
-  intensity gradient to calculate stand level probability of wind damage
-  over 100 years period. We further investigate the effects of wind damage
-  risk by the pulp and log timber volume at risk under variaous scenarios
-  and over time. We found that stands under CCF have higher wind risk
-  probability than RF, and RF maintains levels of wind risk over time,
-  while in CCF risk increases. Yet, the pulp timber at risk under RF is
-  three times higher then in CCF under all harvest intensities. The CCF
-  dominates in production of log wood, whereas pulp wood in intensive
-  harvesting (RF) creates up to 1/2 of the total standing volume. RF
-  produces smaller, younger trees (15 m and mean age of 50) compared to
-  CCF (22m and 80 years) (!!! WHAT ID DBH???), and maintains less trees
-  over stand. The stands under SA regimes have similar trends over harvest
-  intensity level and time, independent of prevailing regimes applied over
-  landscapes. We conclude that althought CCF increases landscape level
-  wind risk, it equalizes the exposed timber volume at risk over time,
-  compared to RF that culminates volume at risk to certain time - right
-  beforet the harvest.
+  Future forest management needs to balance between simultaneous provision
+  of timber, supporting non-woody ecosystem services, and shelter
+  biodiversity. New techniques to atteint this goal emerge:
+  landscape-level optimization of forest managements, increasing
+  proportion of set-aside forest stands, and new harvesting techniques,
+  such as continuous forest cover. Yet, novel stand- and landscape-level
+  management shape forest structures and define future stand vulnerability
+  to more frequent climatic disruptions, such as windthrows under
+  hardening climate change. To understand how will the traditional
+  (rotation forestry, RF) and novel forest managements techniques
+  (continuous cover forest, CCF) combined by optimal management alternate
+  the probability of wind risk, we simulated forest stand dynamics under
+  groups of alternative management regimes (RF, CCF and combined: ALL)
+  optimized over the range of harvesting intensity gradient to calculate
+  stand level probability of wind damage over 100 years period. We further
+  investigate the effects of wind damage risk by the pulp and log timber
+  volume at risk under variaous scenarios and over time. We found that
+  stands under CCF have higher wind risk probability than RF, and RF
+  maintains levels of wind risk over time, while in CCF risk increases.
+  Yet, the pulp timber at risk under RF is three times higher then in CCF
+  under all harvest intensities. The CCF dominates in production of log
+  wood, whereas pulp wood in intensive harvesting (RF) creates up to 1/2
+  of the total standing volume. RF produces smaller, younger trees (15 m
+  and mean age of 50) compared to CCF (22m and 80 years) (!!! WHAT ID
+  DBH???), and maintains less trees over stand. The stands under SA
+  regimes have similar trends over harvest intensity level and time,
+  independent of prevailing regimes applied over landscapes. We conclude
+  that althought CCF increases landscape level wind risk, it equalizes the
+  exposed timber volume at risk over time, compared to RF that culminates
+  volume at risk to certain time - right beforet the harvest.
   \end{abstract}
   
  \end{frontmatter}
@@ -130,36 +130,28 @@ Jyvaskyla, P.O. Box 35, FI-40014 Jyvaskyla, Finland}
 
 \section{Introduction}\label{introduction}
 
+Clarify tha main question of the manuscripts: how will the future
+
+Future forest ecosystems should simultaneously deliver timber, non-woody
+ecosystem services and shelter biodiversity under increasing rates of
+future forest disturbances.
+
 Future forest ecosystems need to simultaneously provide timber,
 non-woody ecosystem services such as carbon storage or human recreation,
-and shelter biodiversity. Adaptive forest management strives to balance
-between timber production, provision of non-woody ecosystem services,
-and biodiversity. Existance of biodiversity, mostly attached to
-existence of deadwood, is limited by harvesting intensity. Intensive
-logging activities fragment forested landscapes. To balance between
-biodiversity and timber economic gains, the proportion of set-aside
-forests within commercial forests emerges, and new forest management
-approaches are explored, such as continuous forest cover (Eyvindson et
-al., 2021) and traditional harvesting regimes are becoming controversial
-or requested to ban (\ldots{}). The increase of the set aside forests
-within the commercial forests, as well as development of the new
-management techniques affect landscape level structural diversity,
-timing of the thinning, presence of absence of the final cuts in
-rotation forestry or development of the larger trees within continuous
-cover forestry or in set-aside forestry. The fundamental is the carefull
-landscape level planning of the management actions balancing between
-set-aside (unmanaged forests), intensive management and continuously
-present forest cover.
-
-(Triviño et al., 2017) no single management alone is able to balance
-timber and biodiversity demand, and we need to combine management
-regimes over the landscape to balance between nonw-woody ESS,
-biodiversity and timber production. WE need to diversity forest
-management over the landscape to support multifunctionnality (Triviño et
-al., 2017)
-
-CCF is a cost-efficient tool to increase multifunctionnality in
-fennoscandia (Peura et al., 2018)
+and shelter biodiversity.\\
+To balance between biodiversity and timber economic gains, the
+proportion of set-aside forests within commercial forests emerges, and
+new forest management approaches are explored, such as continuous forest
+cover (Eyvindson et al., 2021) and traditional harvesting regimes are
+becoming controversial or requested to ban (\ldots{}). The increase of
+the set aside forests within the commercial forests, as well as
+development of the new management techniques affect landscape level
+structural diversity, timing of the thinning, presence of absence of the
+final cuts in rotation forestry or development of the larger trees
+within continuous cover forestry or in set-aside forestry. The
+fundamental is the carefull landscape level planning of the management
+actions balancing between set-aside (unmanaged forests), intensive
+management and continuously present forest cover.
 
 Optimal management scenarios fullfil the specific objectives of the
 society of forest owners to provide certain timber value, improve
@@ -232,6 +224,21 @@ landscape over the harvest intensity gradient and time. We further
 differentiate between the dynamics of the volume and wind risk in
 managed and set-aside forests.
 
+(Triviño et al., 2017) no single management alone is able to balance
+timber and biodiversity demand, and we need to combine management
+regimes over the landscape to balance between nonw-woody ESS,
+biodiversity and timber production. WE need to diversity forest
+management over the landscape to support multifunctionnality (Triviño et
+al., 2017)
+
+Althought the larger spatial planning scale improves a little bit the
+mitigation between economic and ecological benefits, the succesful
+restoration of deadwood dependent biodiversity will likely require
+active deadwod creation (Pohjanmies et al., 2019).
+
+CCF is a cost-efficient tool to increase multifunctionnality in
+fennoscandia (Peura et al., 2018)
+
 \section{Methods}\label{methods}
 
 \subsection{Study area}\label{study-area}
@@ -257,7 +264,7 @@ years and a set of optimal solutions balancing between intensifying
 harvest levels and multifunctionnality (from completely set-aside,
 i.e.~no management to maximal harvest gains). From the set of optimal
 solutions we have calculated stand-level probability of wind damage (for
-full details, please refer to Eyvindson et al. (2021) study. Fig.
+full details, please refer to ({\textbf{???}}) study. Fig.
 \ref{workflow}) represents study workflow.
 
 \begin{figure}
@@ -540,7 +547,7 @@ uncertainities in future wind occurences
   teh single benefit - timber - while deterioration non-woody ecosystem
   servoices and destroyng habitats for endangered species should be
   largely replaced over the landscapes by managements fulfillings
-  multiple benefits Eyvindson et al. (2021).
+  multiple benefits ({\textbf{???}}).
 \item
 \end{itemize}
 
@@ -562,7 +569,7 @@ limited efficiencies and decreses under climate change (Zimová et al.,
 Metsänhoidon suositukset {[}Good forest management recommendations{]}.
 Forestry Development Center Tapio.
 
-\hypertarget{ref-Eyvindson2020}{}
+\hypertarget{ref-Eyvindson2021}{}
 Eyvindson, K., Duflot, R., Triviño, M., Blattert, C., Potterf, M.,
 Mönkkönen, M., 2021. High boreal forest multifunctionality requires
 continuous cover forestry as a dominant management. Land Use Policy 100,
@@ -581,6 +588,12 @@ Continuous cover forestry is a cost-efficient tool to increase
 multifunctionality of boreal production forests in Fennoscandia.
 Biological Conservation 217, 104--112.
 doi:\href{https://doi.org/10.1016/j.biocon.2017.10.018}{10.1016/j.biocon.2017.10.018}
+
+\hypertarget{ref-Pohjanmies2019}{}
+Pohjanmies, T., Eyvindson, K., Mönkkönen, M., 2019. Forest management
+optimization across spatial scales to reconcile economic and
+conservation objectives. PLoS ONE 14, 1--16.
+doi:\href{https://doi.org/10.1371/journal.pone.0218213}{10.1371/journal.pone.0218213}
 
 \hypertarget{ref-RDevelopmentCoreTeam2019}{}
 R Development Core Team, 2019. R: A language and environment for
